--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    height: 89vh;
+    height: 100%;
     margin-bottom: 50px;
 }
 
